"switch landing width from 100vw to 100% to fix horizontal overflow issue"

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,7 +1,7 @@
 .landing {
     text-align:center;
     line-height:1.6;
-    width: 100vw;
+    width: 100%;
     height:100vh;
     margin:-60px auto 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../public/skyline2.jpg");
